tests/ui/reborrow/custom_mut_place_conflict_field.stderr
error[E0499]: cannot borrow `a` as mutable more than once at a time
  --> $DIR/custom_mut_place_conflict_field.rs:14:14
   |
LL |     let b: &mut () = a.0;
   |                      --- first mutable borrow occurs here
LL |     reborrow(a);
   |              ^ second mutable borrow occurs here
LL |
LL |     let _ = b;
   |             - first borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0499`.
